Fix wrong background color

--- a/frontend/src/styles/components/game.css
+++ b/frontend/src/styles/components/game.css
@@ -109,7 +109,7 @@
   ;
 }
 
-.wos-block + .wos-block--hidden {
+.wos-block--hidden {
   @apply bg-yellow;
 }
 
